--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -12,8 +12,9 @@ target 'RollingBarExample' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.80.0' })
-  post_install do |installer|
-    flipper_post_install(installer)
-  end
+  # @Floyd: no need to use Flipper for example app because the component is simple enough.
+  # use_flipper!({ 'Flipper' => '0.80.0' })
+  # post_install do |installer|
+  #   flipper_post_install(installer)
+  # end
 end
